--- a/Network.wiki
+++ b/Network.wiki
@@ -9,6 +9,12 @@ nmap -p <port> <ip>
 nc -vz -u <ip> <port>
 nmap -sU -p <port> <ip>
 
+== Dig examples ==
+dig google.com ANY +noall +answer
+
+== Host examples == 
+nslookup -type=any google.com
+
 == Get Interface and IP to be used to reach an IP ==
 ip route get <IP>
 
@@ -17,6 +23,9 @@ sudo arp-scan --interface=<your_Interface> --localnet
 
 , or
 nmap -sP 192.168.1.0/24
+
+== Nslookup examples == 
+nslookup -type=any google.com
 
 == ping, flood ping ==
 sudo ping -f -i 3 www.google.com      #specify interval between requests 
