--- a/MySQL.wiki
+++ b/MySQL.wiki
@@ -108,7 +108,7 @@ WHERE EXISTS (SELECT customerid FROM orders
 SELECT User FROM mysql.user where User like '%read-only-%';
 
 === Create user with pass ===
-CREATE USER 'testuser'@'%' IDENTIFIED BY 'test123test!';
+[[CREATE USER 'testuser'@'%' IDENTIFIED BY 'test123test!';]]
 
 === Change Password for user ===
 SET PASSWORD FOR 'bob'@'%' = PASSWORD('password');
