--- a/Git.wiki
+++ b/Git.wiki
@@ -5,9 +5,8 @@ git reset --soft HEAD~1
 
 == Commits, showing from other PRs ==
 git fetch origin
-git checkout feature-01
 git rebase origin/master
-[[git]] push --force --set-upstream origin feature-01
+git push --force --set-upstream origin $(git branch --show-current)
 
 == Graph of commit log history ==
 git log --graph --decorate --pretty=oneline --abbrev-commit
@@ -16,7 +15,7 @@ git log --graph --decorate --pretty=oneline --abbrev-commit
 git checkout master && git pull
 git checkout -
 git rebase master
-git push origin branchName --force
+git push origin $(git branch --show-current) --force
 
 == Remove files from a commit ==
 git reset --soft HEAD^ 
