--- a/Network.wiki
+++ b/Network.wiki
@@ -51,6 +51,12 @@ curl -k https://0.0.0.0:443
 === Change the Host header ===
 curl -H "Host: example.com" http://localhost/
 
+=== Follow redirection ===
+curl -L https://localhost/
+
+=== Show only return code ===
+curl -I https://localhost/
+
 == Dig examples ==
 dig google.com ANY +noall +answer
 
