--- a/Linux.wiki
+++ b/Linux.wiki
@@ -72,6 +72,10 @@ sudo tee -a destination/file < /source/file
 == [[SystemInfo]] ==
 
 == [[Troubleshooting]] ==
+More (to be moved)
+sudo iotop
+iostat -xt 1
+sar - how to enable?
 
 == [[Users]] ==
 
